fixing db setup

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,8 +26,11 @@
         </div>
 
         <div class="hidden" id="logged-in">
-          <button>Korisnički profil</button>
-          <button>Osvježi preslike</button>
+          <a href="./index.html"><button>Početna</button></a>
+          <a href="./profil.html"><button>Korisnički profil</button></a>
+          <a href="http://localhost:3000/refresh">
+            <button>Osvježi preslike</button>
+          </a>
           <button onclick="logout()">Odjava</button>
         </div>
       </div>
