--- a/frontend/profil.html
+++ b/frontend/profil.html
@@ -28,7 +28,7 @@
         <div class="hidden" id="logged-in">
           <a href="./index.html"><button>Početna</button></a>
           <a href="./profil.html"><button>Korisnički profil</button></a>
-          <a href="http://localhost:3000/refresh">
+          <a id="refresh">
             <button>Osvježi preslike</button>
           </a>
           <button onclick="logout()">Odjava</button>
@@ -41,5 +41,6 @@
 
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <script src="./auth.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
