keeping the cookie on logout

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,9 +22,6 @@
     <div class="navbar">
       <div class="navbar-inner">
         <div id="logged-out">
-          <a id="refresh">
-            <button>Osvježi preslike</button>
-          </a>
           <button onclick="login()">Prijava</button>
         </div>
 
@@ -65,7 +62,7 @@
       </ul>
     </div>
 
-    <h3><a href="./datatable.js">Pregled i filtriranje podataka</a></h3>
+    <h3><a href="./datatable.html">Pregled i filtriranje podataka</a></h3>
 
     <script src="https://cdn.auth0.com/js/auth0-spa-js/2.0/auth0-spa-js.production.js"></script>
     <script src="./auth.js"></script>
